# HackBit

./: CMakeLists.txt  LICENSE  README.md  game_main.cc  main.cc
Metta/include/: filesystem.h
Metta/src/: filesystem.cc  game_main.cc
frontend/tools/include/: hbstd.hpp  stdfunc.hpp  stdtype.hpp
frontend/tools/source/: stdfunc.cc
include/: filesystem.h  fs.h
include/functions/: split.h
include/os/: user.h
include/os/fs/: directory.h  file.h  fs.h
src/: fs.cc  main.cpp
src/functions/: split.cpp
src/os/fs/: directory.cpp  file.cpp  fs.cpp
